2001-05-05  Jon K Hellan  <hellan@acm.org>

	* src/item-bar.h (struct _ItemBar): Add guru_cursor member.

	* src/item-bar.c (item_bar_realize): Initialize guru_cursor.
	(item_bar_unrealize): Destroy guru_cursor.
	(is_pointer_on_division): Handle uninitialized case.
	(set_cursor): Do not show resize cursor in guru mode.
	(item_bar_event): Allow gurus to do range selection. Do nothing if
	guru is up but no range selector active. Do not post context menu
	when guru is up.

2001-05-04  Jody Goldberg <jgoldberg@home.com>

	* src/sheet.c (sheet_range_splits_array) : Make the displaying the
	  warning optional.
	(sheet_range_splits_region) : ditto.
	(sheet_range_contains_region) : implement.

	* src/workbook-control-gui.c (sort_cmd) : no need to check for merges
	  or arrays here.
	* src/dialogs/dialog-cell-sort.c (dialog_cell_sort) : or here.

	* src/commands.c (cmd_sort) : it belongs here.

	* src/print.c (print_page) : in the case of grid lines we were off by
	  a point.  In the case without gridlines we need not display the
	  leading cell margins.

2001-05-04  Jody Goldberg <jgoldberg@home.com>

	s/clipboard_release/cellregion_free/
	s/range_copy/range_dup/
	s/cell_region_render_ascii/cellregion_to_string/
	s/clipboard_release/cellregion_free/

	* src/commands.c (cmd_autofill) : Use sheet_range_contains_region.
	(cmd_autofill_redo) : no need to test here.
	(cmd_paste_cut) : test destination for validity and ensure that it
	  does not slice up any merged regions or arrays.  Make the descriptor
	  an argument so that other commands can use this one.
	(cmd_ins_del_colrow_redo) : use colrow_max.
	(cmd_area_set_text_redo) : use sheet_ranges_split_region.
	(cmd_colrow_outline_change) : suppress warning.

	* src/gui-clipboard.c (x_selection_to_cell_region) : simplify by using
	  some of the convenience routines.

	* src/gutils.c (gnumeric_sys_data_dir) : warning suppression.
	(gnumeric_sys_lib_dir) : ditto.

	* src/item-bar.c (item_bar_draw) : add missing warning.
