@@ -1,3 +1,11 @@
+2001-05-05  Almer S. Tigelaar  <almer@gnome.org>
+
+  	* src/item-bar.[ch]:
+ 	(item_bar_realize): Initialize item_bar->shade and tidy to be
+ 	more correct.
+ 	(item_bar_unrealize): Unref item_bar->shade.
+ 	(item_bar_draw): Use item_bar->shade.
+ 
 2001-05-05  Jon K Hellan  <hellan@acm.org>
 
 	* src/item-bar.h (struct _ItemBar): Add guru_cursor member.
